Alpha 0.1.8.35
- Log more information when a door cannot be toggled because there's no available space.

Alpha 0.1.8.34
- Fixed missing entry for the resource pack for 1.18. Thanks, N1ghthauq and ToBugs, for the bug reports!

Alpha 0.1.8.33
- Add full support for Minecraft 1.18.
- Added code generation to generate the required code for unsupported versions. This is disabled by default, but can be enabled in the config via the "allowCodeGeneration" and the "forceCodeGeneration" options. This can only be used to generate code for versions after 1.17.
- Removed a bunch of unused code to make updates a bit easier going forward.
- Fix the /namedoor command giving you more sticks when running the command multiple times. Thanks, MiniMoro, for the bug report!
- Add /newslidingdoor command as a shortcut command for creating new sliding doors. Thanks, Vexius, for the suggestion!
- Update Lands integration for version 5 series. Thanks, Nimari, for the bug report and helping out resolving some issues!
- Fixed issue with restart command where certain configurations may cause issues with other plugins. Thanks, Nimari, for the bug report!
- Added support for PlotSquared v6. Thanks, Leahcim_krob, for the suggestion!
- Fixed incorrect bounds checking for protection hooks. Thanks, Nimari, for the bug report!
- Added destroyList config option to determine which types of blocks can be destroyed by a door toggle. Defaults to WATER, LAVA, FERN, (TALL) (SEA)GASS, and SNOW. Before, this was hardcoded to just WATER and LAVA. Thanks, Henriko Magnifico and Tanguygab, for the suggestions!

Alpha 0.1.8.32
- Fixed end rods not rotating in the Big Door type. Thanks, Achaius, for the bug report!
- Fixed lightning rods not being rotated in drawbridges and big doors.
- Fixed only being able to set invalid open directions for portcullises in the GUI. Thanks, themarwik and Pumamori, for the bug reports!

Alpha 0.1.8.31